# exam-manage-service/src/main/java/com/sebrown2023/controllers/TaskController.java
@@ -1,40 +1,46 @@
 package com.sebrown2023.controllers;
 
-import com.sebrown2023.dto.deprecated.PostTaskDto;
-import com.sebrown2023.dto.deprecated.TaskDto;
+import com.sebrown2023.controller.TaskApi;
+import com.sebrown2023.model.dto.ExamComponent;
+import com.sebrown2023.model.dto.TaskComponent;
 import com.sebrown2023.services.TaskService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
 
 @RestController
 @RequiredArgsConstructor
-@RequestMapping("/task")
-public class TaskController {
+public class TaskController implements TaskApi {
     private final TaskService taskService;
 
-    @GetMapping(value = "/{taskId}")
-    public ResponseEntity<TaskDto> getTask(@PathVariable long taskId) {
-        var taskDto = taskService.getTaskDtoById(taskId);
-        return ResponseEntity.ok(taskDto);
+    @Override
+    public ResponseEntity<TaskComponent> getTask(Long taskId) {
+        var taskComponent = taskService.getTaskComponentById(taskId);
+        return ResponseEntity.ok(taskComponent);
     }
 
-    @GetMapping(value = "")
-    public ResponseEntity<List<TaskDto>> getAllTask() {
-        var tasksDto = taskService.getAllTaskDto();
-        return ResponseEntity.ok(tasksDto);
+    @Override
+    public ResponseEntity<List<TaskComponent>> getAllTasks() {
+        var taskComponents = taskService.getAllTaskComponents();
+        return ResponseEntity.ok(taskComponents);
     }
 
-    @PostMapping()
-    public ResponseEntity<?> createNewTask(PostTaskDto postTaskDto) {
-        taskService.createTask(postTaskDto);
+    @Override
+    public ResponseEntity<List<TaskComponent>> getTasksForExam(Long examId) {
+        var taskComponents = taskService.getAllTaskComponentsByExamId(examId);
+        return ResponseEntity.ok(taskComponents);
+    }
+
+    @Override
+    public ResponseEntity<ExamComponent> createTask(TaskComponent taskComponent) {
+        taskService.createTask(taskComponent);
         return ResponseEntity.ok().build();
     }
 
-    @DeleteMapping(value = "/{taskId}")
-    public ResponseEntity<?> deleteTask(@PathVariable long taskId) {
+    @Override
+    public ResponseEntity<Void> deleteTask(Long taskId) {
         taskService.deleteTask(taskId);
         return ResponseEntity.ok().build();
     }
